--- a/css/global.css
+++ b/css/global.css
@@ -1,1 +1,110 @@
-:root{--color-black:#000;--color-white:#fff;--color-bg:#f7f8f8;--color-section-bg:#f7f7f7;--color-text:#58595b;--color-headings:#005584;--color-light-black:#191919}.custom-checkbox__field:checked+.custom-checkbox__content::after{opacity:1}.custom-checkbox__field:focus+.custom-checkbox__content::before{outline:red solid 2px;outline-offset:2px}.custom-checkbox__field:disabled+.custom-checkbox__content{opacity:.4;pointer-events:none}@font-face{font-family:Montserrat;src:url(../fonts/MontserratBold.woff2) format("woff2");font-weight:700;font-display:swap;font-style:normal}@font-face{font-family:Montserrat;src:url(../fonts/MontserratSemiBold.woff2) format("woff2");font-weight:600;font-display:swap;font-style:normal}@font-face{font-family:Montserrat;src:url(../fonts/MontserratExtraBold.woff2) format("woff2");font-weight:800;font-display:swap;font-style:normal}@font-face{font-family:Montserrat;src:url(../fonts/MontserratRegular.woff2) format("woff2");font-weight:400;font-display:swap;font-style:normal}@font-face{font-family:Montserrat;src:url(../fonts/MontserratMedium.woff2) format("woff2");font-weight:500;font-display:swap;font-style:normal}html{box-sizing:border-box}*,::after,::before{box-sizing:inherit}body{margin:0;font-family:Montserrat,sans-serif;font-weight:600;background-color:var(--color-bg)}img{max-width:100%}a{text-decoration:none}ul{list-style:none;padding:0}.is-outer{position:relative!important;left:-9999px!important}.site-container{overflow:hidden}.is-hidden{display:none!important}.for-mobile{display:none}@media (max-width:768px){.for-mobile{display:block}}.error{border:2px solid #ff4019!important}.btn-reset{border:none;background:0 0;cursor:pointer}.container{margin:0 auto;padding:0 15px;max-width:1600px}.js-focus-visible :focus:not(.focus-visible){outline:0}
+:root {
+  --color-black: #000;
+  --color-white: #fff;
+  --color-bg: #f7f8f8;
+  --color-section-bg: #f7f7f7;
+  --color-text: #58595b;
+  --color-headings: #005584;
+  --color-light-black: #191919; }
+
+.custom-checkbox__field:checked + .custom-checkbox__content::after {
+  opacity: 1; }
+
+.custom-checkbox__field:focus + .custom-checkbox__content::before {
+  outline: 2px solid #f00;
+  outline-offset: 2px; }
+
+.custom-checkbox__field:disabled + .custom-checkbox__content {
+  opacity: 0.4;
+  pointer-events: none; }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/../fonts/MontserratBold.woff2") format("woff2");
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/../fonts/MontserratSemiBold.woff2") format("woff2");
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/../fonts/MontserratExtraBold.woff2") format("woff2");
+  font-weight: 800;
+  font-display: swap;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/../fonts/MontserratRegular.woff2") format("woff2");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/../fonts/MontserratMedium.woff2") format("woff2");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal; }
+
+html {
+  box-sizing: border-box; }
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit; }
+
+body {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  background-color: var(--color-bg); }
+
+img {
+  max-width: 100%; }
+
+a {
+  text-decoration: none; }
+
+ul {
+  list-style: none;
+  padding: 0; }
+
+.is-outer {
+  position: relative !important;
+  left: -9999px !important; }
+
+.site-container {
+  overflow: hidden; }
+
+.is-hidden {
+  display: none !important; }
+
+.for-mobile {
+  display: none; }
+  @media (max-width: 768px) {
+    .for-mobile {
+      display: block; } }
+
+.error {
+  border: 2px #ff4019 solid !important; }
+
+.btn-reset {
+  border: none;
+  background: transparent;
+  cursor: pointer; }
+
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+  max-width: 1600px; }
+
+.js-focus-visible :focus:not(.focus-visible) {
+  outline: none; }
